<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.spbau.nonograms.ui.PlayMenuActivity">

    <LinearLayout
        android:layout_width="271dp"
        android:layout_height="163dp"
        android:orientation="vertical"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintVertical_bias="0.658"
        android:id="@+id/linearLayout2">

        <Button
            android:id="@+id/BlackWhiteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/black_n_white" />

        <Button
            android:id="@+id/ColorButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/coloured" />

        <Button
            android:id="@+id/yourCrosswordsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/your_crosswords" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="257dp"
        android:layout_height="71dp"
        android:fontFamily="casual"
        android:text="@string/choose_crossword_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-16dp" />

</android.support.constraint.ConstraintLayout>
