<?xml version="1.0" encoding="utf-8"?>
<GridLayout android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="4"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:id="@+id/crosswordNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/crossword_name"
        android:textSize="18sp" >
    </TextView>

    <TextView
        android:id="@+id/crosswordNameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="0"
        android:textSize="18sp" >
    </TextView>

    <TextView
        android:id="@+id/authorNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/author_name"
        android:textSize="18sp" >
    </TextView>

    <TextView
        android:id="@+id/authorNameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1"
        android:textSize="18sp" >
    </TextView>

    <TextView
        android:id="@+id/sizeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crossword_size"
        android:layout_column="0"
        android:layout_row="2"
        android:textSize="18sp" >
    </TextView>

    <TextView
        android:id="@+id/sizeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:textSize="18sp" >
    </TextView>
</GridLayout>