<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.spbau.nonograms.ui.MainActivity">

    <LinearLayout
        android:layout_width="235dp"
        android:layout_height="125dp"
        android:orientation="vertical"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintVertical_bias="0.656"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/PlayMenuButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:fontFamily="casual"
            android:text="@string/play"
            android:textSize="14sp" />

        <Button
            android:id="@+id/AboutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
android:fontFamily="casual"
            android:text="@string/about" />
    </LinearLayout>

    <TextView
        android:id="@+id/GreetingText"
        android:layout_width="260dp"
        android:layout_height="63dp"
        android:fontFamily="casual"
        android:text="@string/greeting_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.612" />

</android.support.constraint.ConstraintLayout>
